@@ -1,15 +1,12 @@
 package dictionary.btl;
 
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.VBox;
-import javazoom.jl.player.Player;
 
 import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -24,7 +21,7 @@ public class TextTranslate {
 
     public static String translate(String text) throws IOException {
         String urlStr = "https://script.google.com/macros/s/AKfycbwHsg9Ywpg25EwswiLFGGSCVKaN3eNr8QxsGrdDe9ofcfZIZds/exec" +
-                "?q=" + URLEncoder.encode(text, "UTF-8") +
+                "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) +
                 "&target=" + "vi" +
                 "&source=" + "en";
         URL url = new URL(urlStr);
@@ -39,7 +36,7 @@ public class TextTranslate {
         in.close();
         return response.toString();
     }
-    public void PrintTranslateText (ActionEvent event) throws IOException {
+    public void PrintTranslateText() throws IOException {
         explainText.getChildren().clear();
         String resultText = translate(targetText.getText());
         Label label = new Label();
